--- a/articles/azure-sql/database/monitoring-tuning-index.yml
+++ b/articles/azure-sql/database/monitoring-tuning-index.yml
@@ -11,14 +11,14 @@ metadata:
   ms.collection: performance
   author: WilliamDAssafMSFT
   ms.author: wiassaf
-  ms.reviewer: sstein
-  ms.date: 03/10/2020
-  ms.openlocfilehash: c5e6be0781b6c65e4c45c7f0cee5689db890ac33
-  ms.sourcegitcommit: d60976768dec91724d94430fb6fc9498fdc1db37
+  ms.reviewer: 
+  ms.date: 07/01/2021
+  ms.openlocfilehash: 51c5c876a9564593aebb1969a123932f98a80b19
+  ms.sourcegitcommit: 6bd31ec35ac44d79debfe98a3ef32fb3522e3934
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/02/2020
-  ms.locfileid: "96490464"
+  ms.lasthandoff: 07/02/2021
+  ms.locfileid: "113218239"
 landingContent:
 - title: Erste Schritte bei der Überwachung und Leistungsoptimierung
   linkLists:
@@ -28,8 +28,14 @@ landingContent:
       url: monitor-tune-overview.md
   - linkListType: learn
     links:
-    - text: Playbook zur Überwachung von Microsoft Azure-Datenbank
-      url: https://app.pluralsight.com/library/courses/microsoft-azure-database-playbook-monitoring
+    - text: Konfigurieren von leistungsorientierten Datenbanken
+      url: /learn/modules/configure-databases-performance/
+    - text: Optimieren der Abfrageleistung
+      url: /learn/paths/optimize-query-performance-sql-server/
+    - text: Überwachen und Optimieren von Betriebsressourcen
+      url: /learn/paths/monitor-optimize-operational-resources-sql-server/
+    - text: Schützen, Überwachen und Optimieren
+      url: /learn/modules/protect-monitor-tuning-migrated-database/
 - title: Intelligente Leistungsempfehlungen für Azure SQL-Datenbank
   linkLists:
   - linkListType: concept
