--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -117,6 +117,8 @@
           href: ../common/storage-account-upgrade.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Wiederherstellen eines gelöschten Speicherkontos
           href: ../common/storage-account-recover.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+        - name: Abrufen von Kontokonfigurationseigenschaften
+          href: ../common/storage-account-get-info.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Schützen von Warteschlangendaten
       items:
         - name: Autorisieren des Zugriffs auf Daten aus der Warteschlange
