commit translated contents

--- a/articles/application-gateway/application-gateway-faq.yml
+++ b/articles/application-gateway/application-gateway-faq.yml
@@ -9,12 +9,12 @@ metadata:
   ms.date: 06/08/2021
   ms.author: victorh
   ms.custom: references_regions
-  ms.openlocfilehash: afbd0c7fbbe6565a2f8e80c394d8ac608d1aa27a
-  ms.sourcegitcommit: 8bca2d622fdce67b07746a2fb5a40c0c644100c6
+  ms.openlocfilehash: f9f6a834239e46c2c0934dd145f8a1193f6a50b2
+  ms.sourcegitcommit: 8669087bcbda39e3377296c54014ce7b58909746
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/09/2021
-  ms.locfileid: "111907375"
+  ms.lasthandoff: 07/18/2021
+  ms.locfileid: "114404414"
 title: Häufig gestellte Fragen zu Application Gateway
 summary: >
   [!INCLUDE [updated-for-az](../../includes/updated-for-az.md)]
@@ -127,7 +127,7 @@ sections:
   - question: Kann ich im Application Gateway-Subnetz noch etwas anderes bereitstellen?
     answer: Nein. Aber Sie können weitere Application Gateway-Instanzen im Subnetz bereitstellen.
   - question: Kann ich das virtuelle Netzwerk oder das Subnetz für ein vorhandenes Application Gateway ändern?
-    answer: "Sie können ein Application Gateway nur zwischen Subnetzen verschieben, die sich innerhalb desselben virtuellen Netzwerks befinden. Um diese Aktion auszuführen, muss das Application Gateway im Vorfeld *beendet* werden. Dieser Vorgang kann nur mit Azure PowerShell und Azure CLI durchgeführt werden, indem Sie die folgenden Befehle ausführen:\n\n**Azure PowerShell**\n\n```azurepowershell-interactive\n$VNet = Get-AzVirtualNetwork -Name \"<VNetName>\" -ResourceGroupName \"<ResourceGroup>\"\n$Subnet = Get-AzVirtualNetworkSubnetConfig -Name \"<NewSubnetName>\" -VirtualNetwork $VNet\n$AppGw = Get-AzApplicationGateway -Name \"<ApplicationGatewayName>\" -ResourceGroupName \"<ResourceGroup>\"\nStop-AzApplicationGateway -ApplicationGateway $AppGw\n$AppGw = Set-AzApplicationGatewayIPConfiguration -ApplicationGateway $AppGw -Name \"<IPConfigurationName>\" -Subnet $Subnet\nSet-AzApplicationGateway -ApplicationGateway $AppGw\n```\nWeitere Informationen finden Sie unter [Set-AzApplicationGatewayIPConfiguration](/powershell/module/az.network/Set-AzApplicationGatewayIPConfiguration).\n\n**Azure-Befehlszeilenschnittstelle**\n\n```azurecli-interactive\naz network application-gateway stop -g <ResourceGroup> -n <ApplicationGatewayName>\naz network application-gateway update -g <ResourceGroup> -n <ApplicationGatewayName> --set gatewayIpConfigurations[0].subnet.id=<subnetID>\n``` \n"
+    answer: "Sie können ein Application Gateway nur zwischen Subnetzen verschieben, die sich innerhalb desselben virtuellen Netzwerks befinden. Es wird bei V1 mit öffentlichem und privatem Front-End und bei V2 nur mit öffentlichem Front-End unterstützt. Um diese Aktion auszuführen, muss das Application Gateway im Vorfeld *beendet* werden. Beachten Sie, dass sich beim Beenden/Starten von V1 die öffentliche IP-Adresse ändert: Dieser Vorgang kann nur mit Azure PowerShell und Azure CLI durchgeführt werden, indem Sie die folgenden Befehle ausführen:\n\n**Azure PowerShell**\n\n```azurepowershell-interactive\n$VNet = Get-AzVirtualNetwork -Name \"<VNetName>\" -ResourceGroupName \"<ResourceGroup>\"\n$Subnet = Get-AzVirtualNetworkSubnetConfig -Name \"<NewSubnetName>\" -VirtualNetwork $VNet\n$AppGw = Get-AzApplicationGateway -Name \"<ApplicationGatewayName>\" -ResourceGroupName \"<ResourceGroup>\"\nStop-AzApplicationGateway -ApplicationGateway $AppGw\n$AppGw = Set-AzApplicationGatewayIPConfiguration -ApplicationGateway $AppGw -Name $AppGw.GatewayIPConfigurations.Name -Subnet $Subnet\n#If you have a private frontend IP configuration, uncomment and run the next line:\n#$AppGw = Set-AzApplicationGatewayFrontendIPConfig -Name $AppGw.FrontendIPConfigurations.Name[1] -Subnet $Subnet -ApplicationGateway $AppGw\nSet-AzApplicationGateway -ApplicationGateway $AppGw\n```\nWeitere Informationen finden Sie unter [Set-AzApplicationGatewayIPConfiguration](/powershell/module/az.network/Set-AzApplicationGatewayIPConfiguration).\n\n**Azure-Befehlszeilenschnittstelle**\n\n```azurecli-interactive\naz network application-gateway stop -g <ResourceGroup> -n <ApplicationGatewayName>\naz network application-gateway update -g <ResourceGroup> -n <ApplicationGatewayName> --set gatewayIpConfigurations[0].subnet.id=<subnetID>\n``` \n"
   - question: Werden Netzwerksicherheitsgruppen im Application Gateway-Subnetz unterstützt?
     answer: >
       Siehe [Application Gateway – Konfigurationsübersicht](./configuration-infrastructure.md#network-security-groups)
