--- a/articles/azure-vmware/index.yml
+++ b/articles/azure-vmware/index.yml
@@ -8,13 +8,13 @@ metadata:
   ms.topic: landing-page
   author: shortpatti
   ms.author: v-patsho
-  ms.date: 05/11/2021
-  ms.openlocfilehash: 28f73f52b98edba523fd36203d6fef863c4e9d1a
-  ms.sourcegitcommit: 942a1c6df387438acbeb6d8ca50a831847ecc6dc
+  ms.date: 07/02/2021
+  ms.openlocfilehash: 6e221829fae0423ccf9f13970cc6b71136bb10c2
+  ms.sourcegitcommit: 025a2bacab2b41b6d211ea421262a4160ee1c760
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/11/2021
-  ms.locfileid: "112021481"
+  ms.lasthandoff: 07/06/2021
+  ms.locfileid: "113301886"
 landingContent:
 - title: Informationen zu Azure VMware Solution
   linkLists:
@@ -47,23 +47,23 @@ landingContent:
     - text: Allgemein
       url: ./faq.yml
     - text: Kundenkommunikation
-      url: /azure/azure-vmware/faq.yml#customer-communication
+      url: /azure/azure-vmware/faq#customer-communication
     - text: Konfiguration und Setup
-      url: /azure/azure-vmware/faq.yml#configuration-and-setup
+      url: /azure/azure-vmware/faq#configuration-and-setup
     - text: VMware-Software
-      url: /azure/azure-vmware/faq.yml#vmware-software
+      url: /azure/azure-vmware/faq#vmware-software
     - text: Compute
-      url: /azure/azure-vmware/faq.yml#compute
+      url: /azure/azure-vmware/faq#compute
     - text: Netzwerk und Interkonnektivität
-      url: /azure/azure-vmware/faq.yml#networking-and-interconnectivity
+      url: /azure/azure-vmware/faq#networking-and-interconnectivity
     - text: Storage
-      url: /azure/azure-vmware/faq.yml#storage
+      url: /azure/azure-vmware/faq#storage
     - text: Hosts, Cluster und private Clouds
-      url: /azure/azure-vmware/faq.yml#hosts,-clusters,-and-private-clouds
+      url: /azure/azure-vmware/faq#hosts,-clusters,-and-private-clouds
     - text: Identitätsverwaltung
-      url: /azure/azure-vmware/faq.yml#identity-management
+      url: /azure/azure-vmware/faq#identity-management
     - text: Abrechnung und Support
-      url: /azure/azure-vmware/faq.yml#billing-and-support
+      url: /azure/azure-vmware/faq#billing-and-support
 - title: Erste Schritte
   linkLists:
   - linkListType: deploy
@@ -128,6 +128,8 @@ landingContent:
       url: configure-site-to-site-vpn-gateway.md
     - text: Konfigurieren von Windows Server-Failoverclustern
       url: configure-windows-server-failover-cluster.md
+    - text: Verbinden mehrerer privater Clouds in der gleichen Region
+      url: connect-multiple-private-clouds-same-region.md
 - title: Native Azure-Integration
   linkLists:
   - linkListType: how-to-guide
@@ -144,16 +146,14 @@ landingContent:
       url: deploy-traffic-manager-balance-workloads.md
     - text: Konfigurieren von Warnungen und Verwenden von Metriken
       url: configure-alerts-for-azure-vmware-solution.md
-- title: Sichern und Wiederherstellen mit Azure Backup Server
+- title: Sichern mit Azure Backup Server
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: Sichern virtueller VMware-Computer
-      url: ../backup/backup-azure-backup-server-vmware.md?context=%2fazure%2fazure-vmware%2fcontext%2fcontext
-    - text: Wiederherstellen virtueller VMware-Computer
-      url: ../backup/restore-azure-backup-server-vmware.md?context=%2fazure%2fazure-vmware%2fcontext%2fcontext
-    - text: Überwachen von Azure Backup-Workloads
-      url: ../backup/backup-azure-monitoring-built-in-monitor.md?context=%2fazure%2fazure-vmware%2fcontext%2fcontext
+    - text: Einrichten von Backup Server
+      url: set-up-backup-server-for-azure-vmware-solution.md
+    - text: Sichern von VMs in der privaten Cloud mit Backup Server
+      url: backup-azure-vmware-solution-virtual-machines.md
 - title: VMware Solutions
   linkLists:
   - linkListType: how-to-guide
@@ -166,6 +166,8 @@ landingContent:
       url: deploy-vm-content-library.md
     - text: Bereitstellen der Notfallwiederherstellung mithilfe von VMware HCX
       url: deploy-disaster-recovery-using-vmware-hcx.md
+    - text: Upgraden der VMware HCX-Appliance
+      url: https://docs.vmware.com/en/VMware-HCX/4.1/hcx-user-guide/GUID-02DB88E1-EC81-434B-9AE9-D100E427B31C.html
 - title: VMware-Ökosystem
   linkLists:
   - linkListType: reference
