--- a/articles/cognitive-services/Translator/toc.yml
+++ b/articles/cognitive-services/Translator/toc.yml
@@ -122,6 +122,8 @@
           href: document-translation/reference/get-translation-status.md
         - name: Abbrechen der Übersetzung
           href: document-translation/reference/cancel-translation.md
+    - name: Häufig gestellte Fragen
+      href: document-translation/faq.md
 - name: Benutzerdefinierter Translator
   items:
     - name: Worum handelt es sich bei Custom Translator?
@@ -142,7 +144,7 @@
           href: custom-translator/how-to-view-document-details.md
         - name: Trainieren eines Modells
           href: custom-translator/how-to-train-model.md
-        - name: ViewModel-Details
+        - name: Anzeigen der Modelldetails
           href: custom-translator/how-to-view-model-details.md
         - name: Anzeigen der Ergebnisse von Systemtests
           href: custom-translator/how-to-view-system-test-results.md
