--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -151,7 +151,7 @@
               href: concepts-connectivity-architecture.md
               displayName: 'security, architecture'
             - name: Bedrohungsschutz mit Azure Defender
-              href: ../security-center/defender-for-databases-introduction.md
+              href: ../security-center/defender-for-databases-usage.md?toc=/azure/postgresql/toc.json&bc=/azure/postgresql/breadcrumb/toc.json
               displayName: 'security, advanced threat protection'
             - name: Azure AD-Authentifizierung
               href: concepts-aad-authentication.md
@@ -459,6 +459,10 @@
         - name: Netzwerk
           href: flexible-server/concepts-networking.md
           displayName: 'virtual networks, vnet, IP address, public access'
+        - name: Firewallregeln
+          href: flexible-server/concepts-firewall-rules.md
+        - name: Sicherheit
+          href: flexible-server/concepts-security.md
         - name: Einschränkungen
           href: flexible-server/concepts-limits.md
         - name: Erweiterungen
@@ -528,10 +532,12 @@
                   href: flexible-server/how-to-manage-firewall-portal.md
                 - name: Azure CLI
                   href: flexible-server/how-to-manage-firewall-cli.md
-            - name: TLS/SSL
+            - name: TLS/SSL/SCRAM
               items:
                 - name: Herstellen einer Verbindung per TLS/SSL
                   href: flexible-server/how-to-connect-tls-ssl.md
+                - name: Herstellen einer Verbindung per SCRAM
+                  href: flexible-server/how-to-connect-scram.md
         - name: Konfigurieren von Serverparametern
           items:
             - name: Azure-Portal
@@ -643,6 +649,8 @@
               href: concepts-hyperscale-high-availability.md
         - name: Replikation
           href: concepts-hyperscale-read-replicas.md
+        - name: Verbindungspooling
+          href: concepts-hyperscale-connection-pool.md
         - name: Überwachen und Optimieren
           items:
             - name: Überwachen und Optimieren
@@ -695,6 +703,8 @@
           items:
             - name: Azure-Portal
               href: howto-hyperscale-maintenance.md
+        - name: Neustarten der Servergruppe
+          href: howto-hyperscale-restart.md
         - name: Überwachen
           items:
             - name: Erstellen von Warnungen zu Metriken
