--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -107,11 +107,11 @@
         - name: Azure SDK für .NET (NuGet)
           href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.ResourceGraph/'
         - name: Azure SDK für Go
-          href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph'
+          href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2021-03-01/resourcegraph'
         - name: Azure SDK für Java
           href: /java/api/overview/azure/resourcegraph/management
         - name: Azure SDK für Java (Maven)
-          href: 'https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar'
+          href: 'https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0/jar'
         - name: Azure SDK für JavaScript
           href: /javascript/api/@azure/arm-resourcegraph
         - name: Azure SDK für Python
@@ -121,7 +121,7 @@
         - name: REST
           href: /rest/api/azure-resourcegraph/
         - name: OpenAPI
-          href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/stable/2019-04-01'
+          href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/stable/2021-03-01'
     - name: Resource Manager-Vorlagen
       href: /azure/templates/microsoft.resourcegraph/allversions
     - name: Resource Graph-Tabellen und -Ressourcentypen
@@ -132,8 +132,8 @@
       href: 'https://github.com/Azure-Samples/Governance/tree/master/src/resource-graph'
     - name: YouTube-Kanal zu Governance
       href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
-    - name: Azure-Roadmap
-      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Azure-Updates
+      href: 'https://azure.microsoft.com/updates/'
     - name: Preisrechner
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: UserVoice
