--- a/articles/cdn/TOC.yml
+++ b/articles/cdn/TOC.yml
@@ -149,7 +149,7 @@
         - name: Dateikomprimierung
           href: cdn-troubleshoot-compression.md
         - name: Zulässige Zertifizierungsstellen
-          href: cdn-troubleshoot-allowed-ca.md
+          href: 'https://ccadb-public.secure.force.com/microsoft/IncludedCACertificateReportForMSFT'
         - name: Abonnementangebote und Bandbreiteneinschränkung
           href: subscription-offerings.md
 - name: Verweis
