--- a/articles/index.yml
+++ b/articles/index.yml
@@ -230,7 +230,7 @@ productDirectory:
       imageSrc: ./media/index/metrics-advisor.svg
       azureCategories:
         - ai-machine-learning
-      url: cognitive-services/metrics-advisor/index.yml
+      url: applied-ai-services/metrics-advisor/index.yml
     - title: Personalisierung
       summary: KI-Dienst mit personalisiertem Benutzererlebnis
       imageSrc: 'https://static.docs.com/ui/media/product/azure/cognitive-services.svg'
@@ -552,11 +552,11 @@ productDirectory:
       url: app-service/index.yml
     - title: Azure Virtual Desktop
       summary: Beste Umgebung für virtuelle Desktops unter Azure
-      imageSrc: 'https://static.docs.com/ui/media/product/azure/windows-virtual-desktop.svg'
+      imageSrc: 'https://static.docs.com/ui/media/product/azure/virtual-desktop.svg'
       azureCategories:
         - featured
         - compute
-        - windows-virtual-desktop
+        - azure-virtual-desktop
       url: virtual-desktop/index.yml
     - title: Virtuelle Windows-Computer
       summary: Bereitstellen von virtuellen Windows-Computern in wenigen Sekunden
@@ -571,7 +571,7 @@ productDirectory:
       azureCategories:
         - containers
         - developer-tools
-      url: dev-spaces/index.yml
+      url: /previous-versions/azure/dev-spaces/
     - title: Azure Red Hat OpenShift
       summary: 'Vollständig verwalteter OpenShift-Dienst, der gemeinsam mit Red Hat betrieben wird'
       imageSrc: 'https://static.docs.com/ui/media/product/azure/openshift.svg'
