--- a/articles/cosmos-db/gremlin-api-faq.yml
+++ b/articles/cosmos-db/gremlin-api-faq.yml
@@ -2,18 +2,18 @@
 metadata:
   title: Häufig gestellte Fragen zur Gremlin-API in Azure Cosmos DB
   description: Hier finden Sie Antworten auf häufig gestellte Fragen zur Gremlin-API in Azure Cosmos DB.
-  author: SnehaGunda
   ms.service: cosmos-db
   ms.subservice: cosmosdb-graph
   ms.topic: conceptual
   ms.date: 04/28/2020
-  ms.author: sngun
-  ms.openlocfilehash: ae7dc956f7cc5b50d9ce2b0ad197a5c523168e4b
-  ms.sourcegitcommit: 17345cc21e7b14e3e31cbf920f191875bf3c5914
+  author: manishmsfte
+  ms.author: mansha
+  ms.openlocfilehash: 2441a10cd21d933474053bc79e6243e984ef625c
+  ms.sourcegitcommit: 82d82642daa5c452a39c3b3d57cd849c06df21b0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 05/19/2021
-  ms.locfileid: "111907247"
+  ms.lasthandoff: 07/07/2021
+  ms.locfileid: "113354246"
 title: Häufig gestellte Fragen zur Gremlin-API in Azure Cosmos DB
 summary: >
   [!INCLUDE[appliesto-gremlin-api](includes/appliesto-gremlin-api.md)]
