--- a/articles/dns/index.yml
+++ b/articles/dns/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.topic: landing-page
   author: rohinkoul
   ms.author: rohink
-  ms.date: 09/20/2019
-  ms.openlocfilehash: 7276b26944b7eeca90bdc74fa40507688d591c05
-  ms.sourcegitcommit: 02d443532c4d2e9e449025908a05fb9c84eba039
+  ms.date: 07/07/2021
+  ms.openlocfilehash: 46aca1ee3209265c7a5749b91516feba9e354e44
+  ms.sourcegitcommit: 2cff2a795ff39f7f0f427b5412869c65ca3d8515
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 05/06/2021
-  ms.locfileid: "108765272"
+  ms.lasthandoff: 07/10/2021
+  ms.locfileid: "113595991"
 landingContent:
 - title: Informationen zu Azure DNS
   linkLists:
@@ -23,6 +23,10 @@ landingContent:
     links:
     - text: Was ist Azure DNS?
       url: dns-overview.md
+  - linkListType: learn
+    links:
+    - text: Hosten Ihrer Domäne in Azure DNS
+      url: /learn/modules/host-domain-azure-dns/
 - title: Erstellen einer Azure DNS-Zone und eines Azure DNS-Eintrags
   linkLists:
   - linkListType: quickstart
